[projectfirma/#1243] bug: URL overflow on Org Detail Add class to force wrap long strings

--- a/Source/ProjectFirma.Web/Content/Bootstrap/firma/base.theme.less
+++ b/Source/ProjectFirma.Web/Content/Bootstrap/firma/base.theme.less
@@ -178,6 +178,14 @@ form {
 .bootstrap-select.btn-group.open .dropdown-menu {
     z-index: 1100;
 }
+
+.wrapLongString {
+    /* These are technically the same, but use both */
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;   
+}
+
 // Header
 .header {
     background-color: @firma-logoHeaderBackground-color;
